--- a/index.html
+++ b/index.html
@@ -14,46 +14,42 @@
     <audio id="swoosh" src="audio/607251__d4xx__swoosh-2.wav"></audio>
     <header class="hero">
         <picture>
-            <source srcset="img/ashleigh-joy-photography-uyRku9KF2N8-unsplash-resize-s.jpg">
-            <source srcset="img/ashleigh-joy-photography-uyRku9KF2N8-unsplash-resize.jpg">
-            <source srcset="img/ashleigh-joy-photography-uyRku9KF2N8-unsplash-resize.webp">
-            <source srcset="img/ashleigh-joy-photography-uyRku9KF2N8-unsplash-resize-s.webp">
-            <img src="img/ashleigh-joy-photography-uyRku9KF2N8-unsplash-resize.jpg" alt="">
+            <img src="img\standard_Irak_-_flagg.png" alt="Irak">
         </picture>
         <div class="hero-gradient"></div>
         <div class="container hero-content">
-            <h1>Fossiljägaren</h1>
+            <h1>Fat Obama Clicker</h1>
             <div class="lead">
-                <p>Med entusiasm och bara händer ger du dig ut i jakten på fossil till ditt museum.</p>
-                <p>Värva hjälpredor och gräv dig till nya upptäckter.</p>
-                <p>Hur många besökare kan du få?</p>
+                <p>Familjer i Irak svälter och du måste hjälpa dem!</p>
+                <p>Använd dig av matlådor för att mata dem.</p>
+                <p>Låt dem inte svälta!</p>
             </div>
         </div>
     </header>
     <main class="container">
         <article class="game">
             <div class="game-hud">
+                <div class="w-100">
+                    <h2>Uppgraderingar</h2>
+                    <div id="upgradelist"></div>
+                </div>
                 <ul class="game-currency">
                     <li class="item">
-                        <h3>Benbitar: <span id="money"></span></h3>
+                        <h3>Matlådor: <span id="money"></span></h3>
                     </li>
                     <li class="item">
-                        <h3>Benbitar per klick: <span id="mpc"></span></h3>
+                        <h3>Matlådor per klick: <span id="mpc"></span></h3>
                     </li>
                     <li class="item">
-                        <h3>Benbitar per sekund: <span id="mps"></span></h3>
+                        <h3>Matlådor per sekund: <span id="mps"></span></h3>
                     </li>
                     <li class="item">
                         <h3>Uppgraderingar: <span id="upgrades"></span></h3>
                     </li>
                 </ul>
                 <div class="game-controls">
-                    <button id="game-button">Gräv</button>
+                    <button id="game-button"></button>
                 </div>
-            </div>
-            <div class="w-100">
-                <h2>Uppgraderingar</h2>
-                <div id="upgradelist"></div>
             </div>
         </article>
     </main>
